--- a/_pages/MAE4300.md
+++ b/_pages/MAE4300.md
@@ -1,91 +1,33 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MAE 4300 Ethics - Sarah Grace Brown</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <div class="container">
-        <!-- Sidebar -->
-        <nav class="sidebar">
-            <div class="profile-section">
-                <img src="profile.jpg" alt="Sarah Grace Brown" class="profile-img">
-                <h2>Sarah Grace Brown</h2>
-                <p class="subtitle">Mechanical Engineering</p>
-                <p class="subtitle" style="font-size: 0.85em;">M.Eng Robotics | Cornell University</p>
-            </div>
-            
-            <ul class="nav-menu">
-                <li><a href="index.html">About Me</a></li>
-                <li class="nav-section">Projects</li>
-                <li><a href="robotics-patent-sikorsky.html">Robotics Patent Sikorsky</a></li>
-                <li><a href="tiffany-co.html">Tiffany & Co</a></li>
-                <li><a href="emprise-lab.html">EmPRise Lab</a></li>
-                <li><a href="autonomous-systems-lab.html">Autonomous Systems Lab</a></li>
-                <li><a href="cuauv.html">CUAUV</a></li>
-                <li class="nav-section">Coursework</li>
-                <li><a href="ece4760.html">Microcontrollers: ECE 4760</a></li>
-                <li><a href="cs4750.html">Foundations of Robotics: CS 4750</a></li>
-                <li><a href="fast-robots.html">Fast Robots: ECE 4160/5160</a></li>
-                <li><a href="mechatronics.html">Mechatronics: MAE 3780</a></li>
-                <li><a href="mae4300.html" class="active">Ethics: MAE 4300</a></li>
-                <li><a href="mae4272.html">Blade Design: MAE 4272</a></li>
-            </ul>
-            
-            <div class="contact-section">
-                <h3>Contact</h3>
-                <p>Email: <a href="mailto:seb353@cornell.edu">seb353@cornell.edu</a></p>
-                <p>Phone: (513) 240-6462</p>
-                <div class="social-links">
-                    <a href="https://www.linkedin.com/in/sarah-grace-brown-82084a263/" target="_blank">LinkedIn</a>
-                    <a href="https://github.com/Cornell-MAE-UG/spring-2025-portfolio-sgb1443" target="_blank">GitHub</a>
-                </div>
-            </div>
-        </nav>
-        
-        <!-- Main Content -->
-        <main class="content">
-            <section class="hero">
-                <h1>Ethics in Engineering</h1>
-                <p class="course-code">MAE 4300 - Fall 2024</p>
-            </section>
-            
-            <section class="about">
-                <h2>Course Overview</h2>
-                <p>MAE 4300 explores the ethical dimensions of engineering practice, examining the professional responsibilities of engineers in society. The course addresses critical questions about how engineers should balance technical excellence with social responsibility, environmental stewardship, and public safety.</p>
-                
-                <h2>Key Topics Covered</h2>
-                <p>Throughout the semester, we explored fundamental ethical frameworks and their application to real-world engineering challenges. Topics included professional codes of conduct, risk assessment and communication, intellectual property rights, environmental ethics, and the engineer's role in sustainable development. We analyzed case studies ranging from historical engineering failures to contemporary challenges in emerging technologies like artificial intelligence and autonomous systems.</p>
-                
-                <h2>Project Work</h2>
-                <p>The course emphasized practical application of ethical reasoning through project-based learning. Working in teams, we analyzed complex engineering scenarios that required balancing competing stakeholder interests, evaluating trade-offs between cost and safety, and considering the broader societal implications of technical decisions. These exercises developed skills in ethical decision-making that are essential for responsible engineering practice.</p>
-                
-                <h2>Course Deliverables</h2>
-                
-                <div class="project-section">
-                    <h3>Weekly Assignments</h3>
-                    <p>Regular assignments required analyzing ethical dimensions of current engineering news, applying ethical frameworks to case studies, and developing reasoned arguments for complex technical decisions. These exercises built proficiency in identifying ethical issues and articulating well-supported positions on controversial topics.</p>
-                </div>
-                
-                <div class="project-section">
-                    <h3>Group Discussions</h3>
-                    <p>Collaborative discussions examined diverse perspectives on engineering ethics, exploring how cultural context, professional roles, and personal values influence ethical decision-making. These sessions emphasized the importance of considering multiple viewpoints when addressing ethical challenges in engineering.</p>
-                </div>
-                
-                <div class="project-section">
-                    <h3>Final Portfolio</h3>
-                    <p>The course culminated in a comprehensive portfolio demonstrating growth in ethical reasoning and the ability to apply ethical frameworks to engineering practice. This portfolio synthesized learning from throughout the semester and reflected on how ethical considerations will inform future professional work.</p>
-                </div>
-                
-                <h2>Key Takeaways</h2>
-                <p>This course reinforced that ethical engineering practice extends beyond technical competence to encompass responsibility for public welfare, environmental sustainability, and social justice. Engineers must actively consider the broader implications of their work and commit to transparent communication about risks and limitations. The skills developed in this course are fundamental to fulfilling the professional obligations outlined in engineering codes of ethics and to earning public trust in the engineering profession.</p>
-                
-                <h2>Relevance to Career Goals</h2>
-                <p>As I pursue a career in robotics and autonomous systems, the ethical frameworks explored in MAE 4300 will be essential. Autonomous systems raise critical questions about safety, accountability, privacy, and the appropriate role of automation in society. The analytical tools and ethical reasoning skills developed in this course will help me navigate these challenges responsibly throughout my engineering career.</p>
-            </section>
-        </main>
-    </div>
-</body>
-</html>
+---
+layout: default
+title: MAE 4300 - Ethics
+---
+
+# Ethics in Engineering
+**MAE 4300 - Fall 2024**
+
+## Course Overview
+MAE 4300 explores the ethical dimensions of engineering practice, examining the professional responsibilities of engineers in society. The course addresses critical questions about how engineers should balance technical excellence with social responsibility, environmental stewardship, and public safety.
+
+## Key Topics Covered
+Throughout the semester, we explored fundamental ethical frameworks and their application to real-world engineering challenges. Topics included professional codes of conduct, risk assessment and communication, intellectual property rights, environmental ethics, and the engineer's role in sustainable development. We analyzed case studies ranging from historical engineering failures to contemporary challenges in emerging technologies like artificial intelligence and autonomous systems.
+
+## Project Work
+The course emphasized practical application of ethical reasoning through project-based learning. Working in teams, we analyzed complex engineering scenarios that required balancing competing stakeholder interests, evaluating trade-offs between cost and safety, and considering the broader societal implications of technical decisions. These exercises developed skills in ethical decision-making that are essential for responsible engineering practice.
+
+## Course Deliverables
+
+### Weekly Assignments
+Regular assignments required analyzing ethical dimensions of current engineering news, applying ethical frameworks to case studies, and developing reasoned arguments for complex technical decisions. These exercises built proficiency in identifying ethical issues and articulating well-supported positions on controversial topics.
+
+### Group Discussions
+Collaborative discussions examined diverse perspectives on engineering ethics, exploring how cultural context, professional roles, and personal values influence ethical decision-making. These sessions emphasized the importance of considering multiple viewpoints when addressing ethical challenges in engineering.
+
+### Final Portfolio
+The course culminated in a comprehensive portfolio demonstrating growth in ethical reasoning and the ability to apply ethical frameworks to engineering practice. This portfolio synthesized learning from throughout the semester and reflected on how ethical considerations will inform future professional work.
+
+## Key Takeaways
+This course reinforced that ethical engineering practice extends beyond technical competence to encompass responsibility for public welfare, environmental sustainability, and social justice. Engineers must actively consider the broader implications of their work and commit to transparent communication about risks and limitations. The skills developed in this course are fundamental to fulfilling the professional obligations outlined in engineering codes of ethics and to earning public trust in the engineering profession.
+
+## Relevance to Career Goals
+As I pursue a career in robotics and autonomous systems, the ethical frameworks explored in MAE 4300 will be essential. Autonomous systems raise critical questions about safety, accountability, privacy, and the appropriate role of automation in society. The analytical tools and ethical reasoning skills developed in this course will help me navigate these challenges responsibly throughout my engineering career.
