Convert MAE4272 page from HTML to Markdown format

--- a/_pages/MAE4272.md
+++ b/_pages/MAE4272.md
@@ -1,105 +1,47 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MAE 4272 Blade Design - Sarah Grace Brown</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <div class="container">
-        <!-- Sidebar -->
-        <nav class="sidebar">
-            <div class="profile-section">
-                <img src="profile.jpg" alt="Sarah Grace Brown" class="profile-img">
-                <h2>Sarah Grace Brown</h2>
-                <p class="subtitle">Mechanical Engineering</p>
-                <p class="subtitle" style="font-size: 0.85em;">M.Eng Robotics | Cornell University</p>
-            </div>
-            
-            <ul class="nav-menu">
-                <li><a href="index.html">About Me</a></li>
-                <li class="nav-section">Projects</li>
-                <li><a href="robotics-patent-sikorsky.html">Robotics Patent Sikorsky</a></li>
-                <li><a href="tiffany-co.html">Tiffany & Co</a></li>
-                <li><a href="emprise-lab.html">EmPRise Lab</a></li>
-                <li><a href="autonomous-systems-lab.html">Autonomous Systems Lab</a></li>
-                <li><a href="cuauv.html">CUAUV</a></li>
-                <li class="nav-section">Coursework</li>
-                <li><a href="ece4760.html">Microcontrollers: ECE 4760</a></li>
-                <li><a href="cs4750.html">Foundations of Robotics: CS 4750</a></li>
-                <li><a href="fast-robots.html">Fast Robots: ECE 4160/5160</a></li>
-                <li><a href="mechatronics.html">Mechatronics: MAE 3780</a></li>
-                <li><a href="mae4300.html">Ethics: MAE 4300</a></li>
-                <li><a href="mae4272.html" class="active">Blade Design: MAE 4272</a></li>
-            </ul>
-            
-            <div class="contact-section">
-                <h3>Contact</h3>
-                <p>Email: <a href="mailto:seb353@cornell.edu">seb353@cornell.edu</a></p>
-                <p>Phone: (513) 240-6462</p>
-                <div class="social-links">
-                    <a href="https://www.linkedin.com/in/sarah-grace-brown-82084a263/" target="_blank">LinkedIn</a>
-                    <a href="https://github.com/Cornell-MAE-UG/spring-2025-portfolio-sgb1443" target="_blank">GitHub</a>
-                </div>
-            </div>
-        </nav>
-        
-        <!-- Main Content -->
-        <main class="content">
-            <section class="hero">
-                <h1>Wind Turbine Blade Design Project</h1>
-                <p class="course-code">MAE 4272 - Fluids and Heat Transfer Laboratory - Fall 2024</p>
-            </section>
-            
-            <section class="about">
-                <h2>Project Overview</h2>
-                <p>This semester-long project focused on designing and optimizing wind turbine blades for maximum power generation efficiency. Working as part of a design team, we applied fundamental principles of fluid dynamics, aerodynamics, and heat transfer to create a blade design that could effectively harness wind energy while meeting structural and manufacturing constraints.</p>
-                
-                <h2>Design Context and Objectives</h2>
-                <p>The project challenged us to design a wind turbine blade system capable of generating maximum power from a specified wind speed range while adhering to realistic constraints on materials, manufacturing methods, and structural integrity. Our primary objective was to optimize the blade geometry including airfoil selection, chord length distribution, twist angle variation, and overall blade length to achieve the highest possible coefficient of performance.</p>
-                
-                <p>We operated under several key constraints. The design needed to be manufacturable using available composite materials and fabrication techniques. The blade had to withstand expected aerodynamic and centrifugal loads without excessive deflection or failure. We also had to balance performance optimization with cost considerations and practical manufacturing limitations.</p>
-                
-                <h2>Design Process and Methodology</h2>
-                <p>Our design process began with fundamental aerodynamic theory, studying blade element momentum theory to understand how blade geometry affects power extraction from wind. We analyzed various airfoil profiles to select shapes that would provide optimal lift-to-drag ratios across our operating Reynolds number range. This theoretical foundation guided our initial design decisions.</p>
-                
-                <p>We developed computational models to predict blade performance under various operating conditions. Using MATLAB and computational fluid dynamics tools, we iteratively refined our blade geometry to maximize the power coefficient. This involved optimizing the radial distributions of chord length and twist angle to ensure each blade section operated near its ideal angle of attack throughout the rotation.</p>
-                
-                <p>Throughout the design process, we worked with several key hypotheses. We assumed quasi-steady aerodynamic behavior, allowing us to apply steady-state airfoil data to the rotating blade. We hypothesized that our selected airfoil family would maintain favorable aerodynamic characteristics across the range of Reynolds numbers experienced by different blade sections. We also assumed that manufacturing variations could be kept within tolerances that wouldn't significantly impact performance.</p>
-                
-                <h2>Key Design Decisions</h2>
-                
-                <div class="project-section">
-                    <h3>Airfoil Selection</h3>
-                    <p>After evaluating multiple airfoil families, we selected airfoils optimized for the low Reynolds number regime typical of small wind turbines. Our chosen airfoils demonstrated excellent lift-to-drag ratios and gentle stall characteristics, which would help maintain performance even under off-design conditions. The airfoil selection balanced aerodynamic performance with considerations for manufacturability and structural integrity.</p>
-                </div>
-                
-                <div class="project-section">
-                    <h3>Blade Geometry Optimization</h3>
-                    <p>We optimized the radial variation of chord length and twist angle to maximize energy capture. The blade featured higher twist angles near the root to account for lower relative wind speeds in that region, with twist decreasing toward the tip where relative velocities are higher. Chord length was similarly optimized, starting wider at the root for structural support and tapering toward the tip for aerodynamic efficiency.</p>
-                </div>
-                
-                <div class="project-section">
-                    <h3>Structural Considerations</h3>
-                    <p>Our design incorporated structural analysis to ensure the blade could withstand operational loads. We calculated stress distributions from centrifugal forces and aerodynamic pressures, verifying that our chosen materials and geometry would provide adequate strength with appropriate safety factors. The design balanced the competing demands of aerodynamic efficiency and structural robustness.</p>
-                </div>
-                
-                <h2>Testing and Validation</h2>
-                <p>We validated our design through wind tunnel testing and comparison with theoretical predictions. Laboratory measurements of blade performance confirmed that our design achieved power coefficients close to theoretical predictions, with some deviations attributable to manufacturing imperfections and three-dimensional flow effects not fully captured in our two-dimensional airfoil analysis. These experiments provided valuable insights into the relationship between theory and real-world performance.</p>
-                
-                <h2>Key Results and Conclusions</h2>
-                <p>Our final blade design successfully met the project objectives, achieving a maximum power coefficient that demonstrated effective energy extraction from wind. The project reinforced the importance of systematic design optimization and the value of computational tools in predicting real-world performance. We learned that successful turbine blade design requires careful integration of aerodynamic theory, structural analysis, and manufacturing constraints.</p>
-                
-                <p>The testing phase revealed that while our computational predictions were generally accurate, real-world performance depends critically on manufacturing quality and attention to aerodynamic details. Small deviations in blade geometry, surface finish, and assembly precision can measurably impact performance, highlighting the importance of quality control in turbine manufacturing.</p>
-                
-                <h2>Course Integration</h2>
-                <p>This project served as a capstone experience for MAE 4272, integrating fluid mechanics principles with hands-on laboratory work and design optimization. The course combined theoretical lectures on turbomachinery and aerodynamics with practical laboratory experiments, providing comprehensive training in both the science and engineering of fluid systems. The blade design project allowed us to apply these principles to a realistic engineering challenge with meaningful constraints and performance objectives.</p>
-                
-                <h2>Skills Developed</h2>
-                <p>Through this project, I gained practical experience in aerodynamic design, computational fluid dynamics, experimental validation, and technical communication. The work required proficiency in MATLAB for performance prediction, understanding of composite materials and manufacturing processes, and ability to synthesize results into clear technical documentation. These skills directly support my interest in designing advanced robotic systems where fluid-structure interactions play important roles.</p>
-            </section>
-        </main>
-    </div>
-</body>
-</html>
+---
+layout: default
+title: MAE 4272 - Blade Design
+---
+
+# Wind Turbine Blade Design Project
+**MAE 4272 - Fluids and Heat Transfer Laboratory - Fall 2024**
+
+## Project Overview
+This semester-long project focused on designing and optimizing wind turbine blades for maximum power generation efficiency. Working as part of a design team, we applied fundamental principles of fluid dynamics, aerodynamics, and heat transfer to create a blade design that could effectively harness wind energy while meeting structural and manufacturing constraints.
+
+## Design Context and Objectives
+The project challenged us to design a wind turbine blade system capable of generating maximum power from a specified wind speed range while adhering to realistic constraints on materials, manufacturing methods, and structural integrity. Our primary objective was to optimize the blade geometry including airfoil selection, chord length distribution, twist angle variation, and overall blade length to achieve the highest possible coefficient of performance.
+
+We operated under several key constraints. The design needed to be manufacturable using available composite materials and fabrication techniques. The blade had to withstand expected aerodynamic and centrifugal loads without excessive deflection or failure. We also had to balance performance optimization with cost considerations and practical manufacturing limitations.
+
+## Design Process and Methodology
+Our design process began with fundamental aerodynamic theory, studying blade element momentum theory to understand how blade geometry affects power extraction from wind. We analyzed various airfoil profiles to select shapes that would provide optimal lift-to-drag ratios across our operating Reynolds number range. This theoretical foundation guided our initial design decisions.
+
+We developed computational models to predict blade performance under various operating conditions. Using MATLAB and computational fluid dynamics tools, we iteratively refined our blade geometry to maximize the power coefficient. This involved optimizing the radial distributions of chord length and twist angle to ensure each blade section operated near its ideal angle of attack throughout the rotation.
+
+Throughout the design process, we worked with several key hypotheses. We assumed quasi-steady aerodynamic behavior, allowing us to apply steady-state airfoil data to the rotating blade. We hypothesized that our selected airfoil family would maintain favorable aerodynamic characteristics across the range of Reynolds numbers experienced by different blade sections. We also assumed that manufacturing variations could be kept within tolerances that wouldn't significantly impact performance.
+
+## Key Design Decisions
+
+### Airfoil Selection
+After evaluating multiple airfoil families, we selected airfoils optimized for the low Reynolds number regime typical of small wind turbines. Our chosen airfoils demonstrated excellent lift-to-drag ratios and gentle stall characteristics, which would help maintain performance even under off-design conditions. The airfoil selection balanced aerodynamic performance with considerations for manufacturability and structural integrity.
+
+### Blade Geometry Optimization
+We optimized the radial variation of chord length and twist angle to maximize energy capture. The blade featured higher twist angles near the root to account for lower relative wind speeds in that region, with twist decreasing toward the tip where relative velocities are higher. Chord length was similarly optimized, starting wider at the root for structural support and tapering toward the tip for aerodynamic efficiency.
+
+### Structural Considerations
+Our design incorporated structural analysis to ensure the blade could withstand operational loads. We calculated stress distributions from centrifugal forces and aerodynamic pressures, verifying that our chosen materials and geometry would provide adequate strength with appropriate safety factors. The design balanced the competing demands of aerodynamic efficiency and structural robustness.
+
+## Testing and Validation
+We validated our design through wind tunnel testing and comparison with theoretical predictions. Laboratory measurements of blade performance confirmed that our design achieved power coefficients close to theoretical predictions, with some deviations attributable to manufacturing imperfections and three-dimensional flow effects not fully captured in our two-dimensional airfoil analysis. These experiments provided valuable insights into the relationship between theory and real-world performance.
+
+## Key Results and Conclusions
+Our final blade design successfully met the project objectives, achieving a maximum power coefficient that demonstrated effective energy extraction from wind. The project reinforced the importance of systematic design optimization and the value of computational tools in predicting real-world performance. We learned that successful turbine blade design requires careful integration of aerodynamic theory, structural analysis, and manufacturing constraints.
+
+The testing phase revealed that while our computational predictions were generally accurate, real-world performance depends critically on manufacturing quality and attention to aerodynamic details. Small deviations in blade geometry, surface finish, and assembly precision can measurably impact performance, highlighting the importance of quality control in turbine manufacturing.
+
+## Course Integration
+This project served as a capstone experience for MAE 4272, integrating fluid mechanics principles with hands-on laboratory work and design optimization. The course combined theoretical lectures on turbomachinery and aerodynamics with practical laboratory experiments, providing comprehensive training in both the science and engineering of fluid systems. The blade design project allowed us to apply these principles to a realistic engineering challenge with meaningful constraints and performance objectives.
+
+## Skills Developed
+Through this project, I gained practical experience in aerodynamic design, computational fluid dynamics, experimental validation, and technical communication. The work required proficiency in MATLAB for performance prediction, understanding of composite materials and manufacturing processes, and ability to synthesize results into clear technical documentation. These skills directly support my interest in designing advanced robotic systems where fluid-structure interactions play important roles.
